changes up to flag
