# src/controllers/users.js
@@ -2,41 +2,27 @@
 const NodeCache= require( "node-cache" );
 const axios= require('axios');
 const myCache= new NodeCache( { stdTTL: 100, checkperiod: 120 } );
-const { getUser, createUser, userLogin, updateUserDetails }= require("../models/users");
+const { getUser, createUser, userLogin, updateUserDetails, listOfUsers}= require("../models/users");
 const validator = require('validator');
 const fs = require('fs')
 const path = require('path')
-const { Vonage } = require('@vonage/server-sdk')
 const nodemailer = require("nodemailer");
 const { issueToken } = require("../middlewares/tokenValidator");
 const bcrypt = require('bcrypt');
 const imagePath= "../uploads/users/";
-const admin = require("firebase-admin");
-const serviceAccount = require("../actonissue-firebase.json");
-admin.initializeApp({
-    credential: admin.credential.cert(serviceAccount),
-    databaseURL: 'https://actonissue.firebaseio.com',
-});
 
 const signup= async (req, res)=> {
     try{
         let user= await userLogin(req.body.loginId);
         if(user && user.is_verified) {
-            res.status(400).json({success: false, message: "User already existed with this email or mobile number"})
+            res.status(400).json({success: false, message: "User already existed with this mobile number"})
         } else {
-            let isEmail= await validator.isEmail(req.body.loginId)
             let userObj;
             if(!user){
-                if(isEmail) {
-                    userObj= {name: req.body.name, email: req.body.loginId, password: req.body.password}
-                } else {
-                    userObj= {name: req.body.name, mobile: req.body.loginId, password: req.body.password}
-                }
+                userObj= {name: req.body.name, mobile: req.body.loginId, email: req.body.email, password: req.body.password}
                 user = await createUser(userObj)
             }
-            let token= await genarateOTP()
-            await sendOtp(token, user._id, req.body.loginId, isEmail)
-            res.status(200).json({success: true, message: `Otp sent to ${req.body.loginId} successfully`, data: {userId: user._id}})
+            res.status(200).json({success: true, message: `User created`, data: {userId: user._id}})
         }
     }catch(err) {
         console.log(err)
@@ -48,12 +34,20 @@ const login= async (req, res)=> {
     try{
         let user= await userLogin(req.body.loginId)
         if(user && user.is_verified) {
-            let isMatch= await bcrypt.compare(req.body.password, user.password)
-            if(isMatch) {
-                let token= issueToken({userId: user._id, role: user.role, name: user.name})
-                res.status(200).json({success: true, message: "Logged in successfully", data: token})
+            if(user.status == "active") {
+                let isMatch= await bcrypt.compare(req.body.password, user.password)
+                if(isMatch) {
+                    let token= issueToken({userId: user._id, role: user.role, name: user.name})
+                    if(user.role == "admin"){
+                        req.session.token = token
+                        req.session.save()
+                    }
+                    res.status(200).json({success: true, message: "Logged in successfully", data: token})
+                } else {
+                    res.status(400).json({success: false, message: "Provided user name or password is wrong"})
+                }
             } else {
-                res.status(400).json({success: false, message: "Provided user name or password is wrong"})
+                res.status(400).json({success: false, message: "Something went wrong. Please contact to admin"})
             }
         } else {
             res.status(400).json({success: false, message: "Please signup or verify your details"})
@@ -65,21 +59,12 @@ const login= async (req, res)=> {
 
 const verifyOTP= async (req, res)=> {
     try{
-        let user= await getUser(req.body.userId);
+        let {userId, is_verified} = req.body;
+        let user= await getUser(userId);
         if(user){
-            let otp= await getCache(user._id);
-            if(otp) {
-                if(otp*1 == req.body.token*1){
-                    await updateUserDetails({is_verified: true}, user._id)
-                    let token= issueToken({userId: user._id, role: user.role, name: user.name})
-                    res.status(200).json({success: true, message: "Logged in successfully", data: token})
-                } else {
-                    setCache(user._id, otp);
-                    res.status(400).json({success: false, message: "Provided OTP is invalid or expired"})
-                }
-            } else {
-                res.status(400).json({success: false, message: "Provided OTP is invalid or expired"})
-            }
+            await updateUserDetails({is_verified}, user._id)
+            let token= issueToken({userId: user._id, role: user.role, name: user.name})
+            res.status(200).json({success: true, message: "Logged in successfully", data: token})
         }else {
             res.status(400).json({success: false, message: "Sorry!, We are unable to find your details."})
         }
@@ -105,11 +90,23 @@ const getuser= async (req, res)=> {
     }
 }
 
+const getusers= async (req, res)=> {
+    try{
+        let users= await listOfUsers();
+        res.status(200).json({success: true, message: "user details", data: users})
+    }catch(err){
+        res.status(400).json({success: false, message: err.message})
+    }
+}
+
 const updateUser= async (req, res)=> {
     try{
-        let user= await getUser(req.user.userId);
+        let user= await getUser(req.body.userId || req.user.userId);
         let userObj= {}
         if(user) {
+            if(req.body.status) {
+                userObj['status']= req.body.status
+            }
             if(req.body.name) {
                 userObj['name']= req.body.name
             }
@@ -136,120 +133,6 @@ const updateUser= async (req, res)=> {
         res.status(400).json({success: false, message: err.message})
     }
 }
-const genarateOTP= async ()=>{
-    try{
-        let otp= Math.floor(1000 + Math.random() * 9000);
-        console.log("otp : ", otp)      
-        return otp
-    }catch(err) {
-        throw new Error(err.message ? err.message : "Unable to genarate OTP")
-    }
-}
-
-const setCache= async(key, value)=> {
-    try{
-        await myCache.set(key.toString(), value, 100000);
-        return "success"
-    }catch(err){
-        throw new Error(err.message ? err.message : "Unable to set cache")
-    }
-}
-
-const getCache= async(key)=> {
-    try{
-        let cacheKey= await myCache.take(key.toString());
-        return cacheKey
-    }catch(err){
-        throw new Error(err.message? err.message : "Unable to get the cache")
-    }
-}
-
-const sendOtp= async (otp, userId, notificationSource, isEmail)=> {
-    try{
-        if(isEmail) {
-            //send email for otp
-            const transporter = nodemailer.createTransport({
-                service: "gmail",
-                auth: {
-                  user: "siva.yekula@gmail.com", // Your Ethereal Email address
-                  pass: "bbxg ipvl rwhy gwdu", // Your Ethereal Email password
-                }
-              });
-              let info = await transporter.sendMail({
-                from: 'siva.yekula@gmail.com',
-                to: notificationSource, // Test email address
-                subject: "Verify your account",
-                html: "Please use OTP :<strong>"+otp+"</strong> to verify your email.",
-              });
-              console.log("Message sent: %s", info.messageId); // Output message ID
-        } else { 
-            var https = require('follow-redirects').https;
-var fs = require('fs');
-
-var options = {
-    'method': 'POST',
-    'hostname': 'n8d648.api.infobip.com',
-    'path': '/sms/2/text/advanced',
-    'headers': {
-        'Authorization': 'App 6c8f41c323319f119d3c5faabe1b5870-141de17d-34a2-4061-9b3e-cd158b68b873',
-        'Content-Type': 'application/json',
-        'Accept': 'application/json'
-    },
-    'maxRedirects': 20
-};
-
-var req = https.request(options, function (res) {
-    var chunks = [];
-
-    res.on("data", function (chunk) {
-        chunks.push(chunk);
-    });
-
-    res.on("end", function (chunk) {
-        var body = Buffer.concat(chunks);
-        console.log(body.toString());
-    });
-
-    res.on("error", function (error) {
-        console.error(error);
-    });
-});
-
-var postData = JSON.stringify({
-    "messages": [
-        {
-            "destinations": [
-                {
-                    "to": "91"+notificationSource
-                }
-            ],
-            "from": "InfoSMS",
-            "text": "This is a sample message"+otp
-        }
-    ]
-});
-
-req.write(postData);
-
-req.end();
-            // const apiKey = "NjE3NDU4NDU1ODc5NmI3ODU2NmI0NzM1N2E3YTU0NmY=" 
-            // const sender = "Act On Issue"
-            // let number = "91"+notificationSource
-            // let applicationName = "ActOnIssue"
-            // let otp = "123123"
-            // let message = encodeURIComponent(`Welcome to ${applicationName}, Your OTP is ${otp}. Thanks Act On Issue`);
-            // let url = "http://api.textlocal.in/send/?" + 'apiKey=' + apiKey + '&sender=' + sender + '&numbers=' + number + '&message=' + message
-            // let response= await axios.post(url)
-            // console.log(response.data)
-        }
-        setCache(userId, otp)
-    }catch(err){
-        console.log(err)
-        console.log(otp, userId, notificationSource, isEmail)
-        throw new Error(err.message ? err.message : "Unable to send email or sms")
-    }
-
-}
 
 const saveImage= async (imageString) => {
     try{
@@ -273,5 +156,6 @@ module.exports= {
     signup: signup,
     verifyOTP: verifyOTP,
     getuser: getuser,
-    updateUser: updateUser
+    updateUser: updateUser,
+    getusers: getusers
 }
